PBL/PBL_project18/modules/VPC/internet-gateway.tf

resource "aws_internet_gateway" "ig" {
  vpc_id = aws_vpc.vpc.id

  tags = merge(
    var.tags,
    {
      Name = format("%s-%s", aws_vpc.vpc.id, "IG")
    }

  )
}
